fix: add alert workflow [ci skip]